[Refactor] Correcteg `gap` in `.stories`

--- a/styles/style.css
+++ b/styles/style.css
@@ -260,7 +260,7 @@
   flex-flow: column nowrap;
   justify-content: start;
   align-items: center;
-  gap: 25px;
+  gap: 50px;
 }
 
 .stories__item
